# RustMesh

./: Cargo.toml  README.md  dev-check-strict.sh
.github/workflows/: ci.yml
docs/: RustWave-tree-annotated.txt  RustWave_API_Reference.docx
rustwave-api/: rustwave_api_build_plan.md  rustwave_api_staged_build_prompt.md
src/: decoder.rs  encoder.rs  framer.rs  gui.rs  lib.rs  logging.rs  main.rs  tests.rs  wav.rs
src/api/: broadcast.rs  chan.rs  errors.rs  mod.rs  models.rs  state.rs  tests.rs  wave.rs
